Add JavaFX GUI version